--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ремонт компьютеров</title>
-	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
-	<link rel="icon" href="../img/icon.jpg" type="image/jpg">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="icon" href="img/icon.jpg" type="image/jpg">
 </head>
 
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div>
-		  		<img class="icon" src="../img/icon.jpg">
+		  		<img class="icon" src="img/icon.jpg">
 		  	</div>
 		  	<div class="container-fluid">
 		    <div class="collapse navbar-collapse">
 		      <ul class="navbar-nav">
 				<li class="nav-item offset-0">
-		          <a class="nav-link active" id="brand" href="../html/index.html">Ремонт компьютеров</a>
+		          <a class="nav-link active" id="brand" href="index.html">Ремонт компьютеров</a>
 		        </li>
 		        <li class="nav-item offset-6">
-		          <a class="nav-link active" aria-current="page" href="../html/services.html">Услуги</a>
+		          <a class="nav-link active" aria-current="page" href="html/services.html">Услуги</a>
 		        </li>
 		        <li class="nav-item offset-6">
-		          <a class="nav-link active" aria-current="page" href="../html/application.html">Оставить заявку</a>
+		          <a class="nav-link active" aria-current="page" href="html/application.html">Оставить заявку</a>
 		        </li>  
 		        <li class="nav-item offset-6">
 		          <a class="nav-link active" aria-current="page" href="#">Отзывы</a>
@@ -40,22 +40,22 @@
 			<h2 class="">Популярные услуги</h2>
 			<div class="row">
 			<div class="card text-center" style="width: 30rem;">
-				<img src="../img/services/cleaning.jpg" class="card-img-top" alt="Чистка компьютеров и ноутбуков">
+				<img src="img/services/cleaning.jpg" class="card-img-top" alt="Чистка компьютеров и ноутбуков">
 					<div class="card-body">
 					<h5 class="card-title">Чистка компьютеров и ноутбуков</h5>
 					<p class="card-text">Быстрая и качественная чистка ваших компьютеров и ноутбуков.</p>
 					<form action="">
-						<a href="../html/application.html" class="btn btn-primary">Заказать услугу</a>
+						<a href="html/application.html" class="btn btn-primary">Заказать услугу</a>
 					</form>	
 				</div>
 			</div>
 			<div class="card text-center" style="width: 30rem;">
-				<img src="../img/services/software-installing.jpg" class="card-img-top" alt="Установка программного обеспечения">
+				<img src="img/services/software-installing.jpg" class="card-img-top" alt="Установка программного обеспечения">
 					<div class="card-body">
 					<h5 class="card-title">Установка программного обеспечения</h5>
 					<p class="card-text">Установка лицензионного ПО.</p>
 					<form action="">
-						<a href="../html/application.html" class="btn btn-primary">Заказать услугу</a>
+						<a href="html/application.html" class="btn btn-primary">Заказать услугу</a>
 					</form>
 				</div>
 			</div>
@@ -63,22 +63,22 @@
 
 			<div class="row">
 			<div class="card text-center" style="width: 30rem;">
-				<img src="../img/services/diagnostics.jpg" class="card-img-top" alt="Диагностика">
+				<img src="img/services/diagnostics.jpg" class="card-img-top" alt="Диагностика">
 					<div class="card-body">
 					<h5 class="card-title">Диагностика</h5>
 					<p class="card-text">Диагностика и выявление проблем в компьютере или ноутбуке.</p>
 					<form action="">
-						<a href="../html/application.html" class="btn btn-primary">Заказать услугу</a>
+						<a href="html/application.html" class="btn btn-primary">Заказать услугу</a>
 					</form>
 				</div>
 			</div>
 			<div class="card text-center" style="width: 30rem;">
-				<img src="../img/services/windows-installing.jpg" class="card-img-top" id="windows-installing" alt="Переустановка и настройка Windows">
+				<img src="img/services/windows-installing.jpg" class="card-img-top" id="windows-installing" alt="Переустановка и настройка Windows">
 					<div class="card-body">
 					<h5 class="card-title">Переустановка и настройка Windows</h5>
 					<p class="card-text">Установка  и настройка лицензионного Windows.</p>
 					<form action="">
-						<a href="../html/application.html" class="btn btn-primary">Заказать услугу</a>
+						<a href="html/application.html" class="btn btn-primary">Заказать услугу</a>
 					</form>
 				</div>
 			</div>
@@ -92,9 +92,9 @@
 				<span>Контактная информация</span>
 				<span class="offset-2">Телефон: +79999999999</span>
 				<span class="offset-2">Социальные сети:</span>
-				<img src="../img/footer/odnoklassniki.jpg">
-				<img src="../img/footer/facebook.jpg">
-				<img src="../img/footer/vk.jpg">
+				<img src="img/footer/odnoklassniki.jpg">
+				<img src="img/footer/facebook.jpg">
+				<img src="img/footer/vk.jpg">
 			</div>	
 	</footer>
 </body>
