--- a/html/services.html
+++ b/html/services.html
@@ -18,7 +18,7 @@
 		    <div class="collapse navbar-collapse">
 		      <ul class="navbar-nav">
 				<li class="nav-item offset-0">
-		          <a class="nav-link active" id="brand" href="../html/index.html">Ремонт компьютеров</a>
+		          <a class="nav-link active" id="brand" href="../index.html">Ремонт компьютеров</a>
 		        </li>
 		        <li class="nav-item offset-6">
 		          <a class="nav-link active" aria-current="page" href="../html/services.html">Услуги</a>
