--- a/index.html
+++ b/index.html
@@ -16,20 +16,16 @@
 		  	</div>
 		  	<div class="container-fluid">
 		    <div class="collapse navbar-collapse">
-		      <ul class="navbar-nav">
-				<li class="nav-item offset-0">
-		          <a class="nav-link active" id="brand" href="index.html">Ремонт компьютеров</a>
-		        </li>
-		        <li class="nav-item offset-6">
-		          <a class="nav-link active" aria-current="page" href="html/services.html">Услуги</a>
-		        </li>
-		        <li class="nav-item offset-6">
-		          <a class="nav-link active" aria-current="page" href="html/application.html">Оставить заявку</a>
-		        </li>  
-		        <li class="nav-item offset-6">
-		          <a class="nav-link active" aria-current="page" href="#">Отзывы</a>
-		        </li>    
-		      </ul>
+				<table class="table" id="header">
+				  <tbody>
+				    <tr>
+				      <td scope="col"><a class="nav-link active" id="brand" href="../index.html">Ремонт компьютеров</a></td>
+				      <td scope="col"><a class="nav-link active" aria-current="page" href="../html/services.html">Услуги</a></td>
+				      <td scope="col"><a class="nav-link active" aria-current="page" href="../html/application.html">Оставить заявку</a></td>
+				      <td scope="col"><a class="nav-link active" aria-current="page" href="#">Отзывы</a></td>
+				    </tr>
+				  </tbody>
+			  	</table>    
 		    </div>
 		  </div>
 		</nav>
