--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="icon" href="img/icon.jpg" type="image/jpg">
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+	   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+	   ym(77170612, "init", {
+	        clickmap:true,
+	        trackLinks:true,
+	        accurateTrackBounce:true
+	   });
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/77170612" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -19,9 +33,9 @@
 				<table class="table" id="header">
 				  <tbody>
 				    <tr>
-				      <td scope="col"><a class="nav-link active" id="brand" href="../index.html">Ремонт компьютеров</a></td>
-				      <td scope="col"><a class="nav-link active" aria-current="page" href="../html/services.html">Услуги</a></td>
-				      <td scope="col"><a class="nav-link active" aria-current="page" href="../html/application.html">Оставить заявку</a></td>
+				      <td scope="col"><a class="nav-link active" id="brand" href="index.html">Ремонт компьютеров</a></td>
+				      <td scope="col"><a class="nav-link active" aria-current="page" href="html/services.html">Услуги</a></td>
+				      <td scope="col"><a class="nav-link active" aria-current="page" href="html/application.html">Оставить заявку</a></td>
 				      <td scope="col"><a class="nav-link active" aria-current="page" href="#">Отзывы</a></td>
 				    </tr>
 				  </tbody>
