--- a/html/application.html
+++ b/html/application.html
@@ -6,6 +6,21 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 	<link rel="icon" href="../img/icon.jpg" type="image/jpg">
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+	   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+	   ym(77170612, "init", {
+	        clickmap:true,
+	        trackLinks:true,
+	        accurateTrackBounce:true
+	   });
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/77170612" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -34,15 +49,15 @@
 	<main>
 		<div class="container">
 		
-		<form action="">
+		<form action="../index.html" id="applicationForm" role="form">
 			<div class="mb-3">
 			  <label for="contactInput" class="form-label">Введите контактную информацию, номер телефона или почту</label>
-			  <input type="text" class="form-control" id="contactInput" placeholder="Введите данные">
+			  <input type="text" class="form-control" id="contactInput" name="contactInput" placeholder="Введите данные">
 			</div>
 			
 
-			<select class="form-select">
-			  <option selected>Выберите свою проблему</option>
+			<select class="form-select" name="problemSelect">
+			  <option value="" disabled selected hidden>Выберите свою проблему</option>
 			  <option value="1">Сломался ноутбук</option>
 			  <option value="2">Сломался компьютер</option>
 			  <option value="3">Нужна чистка</option>
@@ -52,11 +67,10 @@
 
 			<div class="mb-3">
 			  <label for="problemInput" class="form-label">Более подробно опишите свою проблему</label>
-			  <input type="text" class="form-control" id="problemInput">
+			  <input type="text" class="form-control" id="problemInput" name="problemInput">
 			</div>
 
-			
-			<a href="#" class="btn btn-primary" id="application-btn">Оставить заявку</a>
+			<button type="submit" class="btn btn-primary" id="application-btn">Оставить заявку</button>
 		</form>
 		</div>
 	</main>
@@ -71,5 +85,7 @@
 				<img src="../img/footer/vk.jpg">
 			</div>	
 	</footer>
+
+	<script src="../js/site.js"></script>
 </body>
 </html>
